force-app/main/default/objects/Dialect__c/Dialect__c.object-meta.xml
<CustomObject>
    <label>Dialect</label>
    <nameField>
        <label>Dialect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>