force-app/main/default/objects/Dialect__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category ID</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Dialects</relationshipLabel>
    <relationshipName>Dialects</relationshipName>
    <type>Lookup</type>
</CustomField>