force-app/main/default/objects/Dialect__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Dialects</relationshipLabel>
    <relationshipName>Dialects</relationshipName>
    <type>Lookup</type>
</CustomField>