force-app/main/default/objects/Dialect__c/validationRules/YODA_CategoryId_OR_ProductId.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_CategoryId_OR_ProductId</fullName>
    <active>true</active>
    <description>Either Category Id or Product Id is required. Both cannot be null.</description>
    <errorConditionFormula>AND( ISBLANK( Category_ID__c  ),
ISBLANK( Product_ID__c  ) )</errorConditionFormula>
    <errorMessage>Please ensure either Category Id or Product Id is updated.</errorMessage>
</ValidationRule>